--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,12 +37,12 @@ a {
   margin: 60px 0px;
   color: #f02d34;
 }
-.marquee {
+/* .marquee {
   position: relative;
   height: 400px;
   width: 100%;
   overflow-x: hidden;
-}
+} */
 
 .track {
   position: absolute;
