--- a/styles/globals.css
+++ b/styles/globals.css
@@ -423,7 +423,7 @@ span.text-red {
   transition: 0.3s ease-in-out;
 }
 .product-detail-image:hover {
-  background-color: #f02d34;
+  background-color: greenyellow;
 }
 .small-images-container {
   display: flex;
@@ -439,7 +439,7 @@ span.text-red {
 }
 
 .selected-image {
-  background-color: #f02d34;
+  background-color: greenyellow;
 }
 .reviews {
   color: #f02d34;
